--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,13 @@ dependencies:
   flutter_local_notifications: ^6.0.0
 
   sqflite: ^2.0.0+3
+  #flutter_string_encryption: ^0.3.1
+  dbcrypt: ^2.0.0
+  #flutter_bcrypt: ^1.0.6
+
+  flutter_svg: ^0.22.0
+  flutter_switch: ^0.3.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -50,9 +57,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
