--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_switch: ^0.3.1
   intl: ^0.17.0
+  fluttertoast: ^8.0.7
 
 dev_dependencies:
   flutter_test:
