--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,21 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   device_info: ^2.0.2
 
-  progress_dialog:
+#  progress_dialog:
+  sn_progress_dialog: ^1.0.1
   fa_stepper: ^0.0.2
+
+  flutter_launcher_icons: ^0.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: 'launcher_icon'
+  ios: false
+  image_path: 'assets/images/logo-app.png'
+  adaptive_icon_background: 'assets/images/logo-app.png'
 
 flutter:
 
